ng/flux/apps/scrutiny/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrutiny
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - scrutiny-ng
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scrutiny
            port:
              number: 8080
